prql-compiler/src/snapshots/prql_compiler__parser__test__inline_pipeline.snap
---
source: prql-compiler/src/parser.rs
expression: "parse_tree_of_str(\"(salary | percentile 50)\",\n                  Rule::parenthesized_pipeline).unwrap()"
---
[
    Pair {
        rule: parenthesized_pipeline,
        span: Span {
            str: "(salary | percentile 50)",
            start: 0,
            end: 24,
        },
        inner: [
            Pair {
                rule: expr,
                span: Span {
                    str: "salary ",
                    start: 1,
                    end: 8,
                },
                inner: [
                    Pair {
                        rule: expr_compare,
                        span: Span {
                            str: "salary ",
                            start: 1,
                            end: 8,
                        },
                        inner: [
                            Pair {
                                rule: expr_add,
                                span: Span {
                                    str: "salary ",
                                    start: 1,
                                    end: 8,
                                },
                                inner: [
                                    Pair {
                                        rule: expr_mul,
                                        span: Span {
                                            str: "salary ",
                                            start: 1,
                                            end: 8,
                                        },
                                        inner: [
                                            Pair {
                                                rule: ident,
                                                span: Span {
                                                    str: "salary",
                                                    start: 1,
                                                    end: 7,
                                                },
                                                inner: [],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
            Pair {
                rule: pipeline,
                span: Span {
                    str: "percentile 50",
                    start: 10,
                    end: 23,
                },
                inner: [
                    Pair {
                        rule: func_curry,
                        span: Span {
                            str: "percentile 50",
                            start: 10,
                            end: 23,
                        },
                        inner: [
                            Pair {
                                rule: ident,
                                span: Span {
                                    str: "percentile",
                                    start: 10,
                                    end: 20,
                                },
                                inner: [],
                            },
                            Pair {
                                rule: named_expr,
                                span: Span {
                                    str: "50",
                                    start: 21,
                                    end: 23,
                                },
                                inner: [
                                    Pair {
                                        rule: expr,
                                        span: Span {
                                            str: "50",
                                            start: 21,
                                            end: 23,
                                        },
                                        inner: [
                                            Pair {
                                                rule: expr_compare,
                                                span: Span {
                                                    str: "50",
                                                    start: 21,
                                                    end: 23,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: expr_add,
                                                        span: Span {
                                                            str: "50",
                                                            start: 21,
                                                            end: 23,
                                                        },
                                                        inner: [
                                                            Pair {
                                                                rule: expr_mul,
                                                                span: Span {
                                                                    str: "50",
                                                                    start: 21,
                                                                    end: 23,
                                                                },
                                                                inner: [
                                                                    Pair {
                                                                        rule: number,
                                                                        span: Span {
                                                                            str: "50",
                                                                            start: 21,
                                                                            end: 23,
                                                                        },
                                                                        inner: [],
                                                                    },
                                                                ],
                                                            },
                                                        ],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
