prql-compiler/src/snapshots/prql_compiler__parser__test__parse_function.snap
---
source: prql-compiler/src/parser.rs
expression: "parse_tree_of_str(\"func plus_one x ~ x + 1\", Rule::func_def)?"
---
[
    Pair {
        rule: func_def,
        span: Span {
            str: "func plus_one x ~ x + 1",
            start: 0,
            end: 23,
        },
        inner: [
            Pair {
                rule: func_def_flags,
                span: Span {
                    str: "",
                    start: 5,
                    end: 5,
                },
                inner: [],
            },
            Pair {
                rule: ident,
                span: Span {
                    str: "plus_one",
                    start: 5,
                    end: 13,
                },
                inner: [],
            },
            Pair {
                rule: func_def_params,
                span: Span {
                    str: "x",
                    start: 14,
                    end: 15,
                },
                inner: [
                    Pair {
                        rule: named_term,
                        span: Span {
                            str: "x",
                            start: 14,
                            end: 15,
                        },
                        inner: [
                            Pair {
                                rule: ident,
                                span: Span {
                                    str: "x",
                                    start: 14,
                                    end: 15,
                                },
                                inner: [],
                            },
                        ],
                    },
                ],
            },
            Pair {
                rule: expr,
                span: Span {
                    str: "x + 1",
                    start: 18,
                    end: 23,
                },
                inner: [
                    Pair {
                        rule: expr_compare,
                        span: Span {
                            str: "x + 1",
                            start: 18,
                            end: 23,
                        },
                        inner: [
                            Pair {
                                rule: expr_add,
                                span: Span {
                                    str: "x + 1",
                                    start: 18,
                                    end: 23,
                                },
                                inner: [
                                    Pair {
                                        rule: expr_mul,
                                        span: Span {
                                            str: "x ",
                                            start: 18,
                                            end: 20,
                                        },
                                        inner: [
                                            Pair {
                                                rule: ident,
                                                span: Span {
                                                    str: "x",
                                                    start: 18,
                                                    end: 19,
                                                },
                                                inner: [],
                                            },
                                        ],
                                    },
                                    Pair {
                                        rule: operator_add,
                                        span: Span {
                                            str: "+",
                                            start: 20,
                                            end: 21,
                                        },
                                        inner: [],
                                    },
                                    Pair {
                                        rule: expr_mul,
                                        span: Span {
                                            str: "1",
                                            start: 22,
                                            end: 23,
                                        },
                                        inner: [
                                            Pair {
                                                rule: number,
                                                span: Span {
                                                    str: "1",
                                                    start: 22,
                                                    end: 23,
                                                },
                                                inner: [],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
