prql-compiler/src/snapshots/prql_compiler__parser__test__parse_into_parse_tree-3.snap
---
source: prql-compiler/src/parser.rs
expression: "parse_tree_of_str(\"group [title, country] (\n                aggregate [sum salary]\n            )\",\n        Rule::pipeline)?"
---
[
    Pair {
        rule: pipeline,
        span: Span {
            str: "group [title, country] (\n                aggregate [sum salary]\n            )",
            start: 0,
            end: 77,
        },
        inner: [
            Pair {
                rule: func_curry,
                span: Span {
                    str: "group [title, country] (\n                aggregate [sum salary]\n            )",
                    start: 0,
                    end: 77,
                },
                inner: [
                    Pair {
                        rule: ident,
                        span: Span {
                            str: "group",
                            start: 0,
                            end: 5,
                        },
                        inner: [],
                    },
                    Pair {
                        rule: expr,
                        span: Span {
                            str: "[title, country] ",
                            start: 6,
                            end: 23,
                        },
                        inner: [
                            Pair {
                                rule: list,
                                span: Span {
                                    str: "[title, country]",
                                    start: 6,
                                    end: 22,
                                },
                                inner: [
                                    Pair {
                                        rule: expr_call,
                                        span: Span {
                                            str: "title",
                                            start: 7,
                                            end: 12,
                                        },
                                        inner: [
                                            Pair {
                                                rule: expr,
                                                span: Span {
                                                    str: "title",
                                                    start: 7,
                                                    end: 12,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: ident,
                                                        span: Span {
                                                            str: "title",
                                                            start: 7,
                                                            end: 12,
                                                        },
                                                        inner: [],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                    Pair {
                                        rule: expr_call,
                                        span: Span {
                                            str: "country",
                                            start: 14,
                                            end: 21,
                                        },
                                        inner: [
                                            Pair {
                                                rule: expr,
                                                span: Span {
                                                    str: "country",
                                                    start: 14,
                                                    end: 21,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: ident,
                                                        span: Span {
                                                            str: "country",
                                                            start: 14,
                                                            end: 21,
                                                        },
                                                        inner: [],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                    Pair {
                        rule: expr,
                        span: Span {
                            str: "(\n                aggregate [sum salary]\n            )",
                            start: 23,
                            end: 77,
                        },
                        inner: [
                            Pair {
                                rule: nested_pipeline,
                                span: Span {
                                    str: "(\n                aggregate [sum salary]\n            )",
                                    start: 23,
                                    end: 77,
                                },
                                inner: [
                                    Pair {
                                        rule: pipeline,
                                        span: Span {
                                            str: "aggregate [sum salary]",
                                            start: 41,
                                            end: 63,
                                        },
                                        inner: [
                                            Pair {
                                                rule: func_curry,
                                                span: Span {
                                                    str: "aggregate [sum salary]",
                                                    start: 41,
                                                    end: 63,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: ident,
                                                        span: Span {
                                                            str: "aggregate",
                                                            start: 41,
                                                            end: 50,
                                                        },
                                                        inner: [],
                                                    },
                                                    Pair {
                                                        rule: expr,
                                                        span: Span {
                                                            str: "[sum salary]",
                                                            start: 51,
                                                            end: 63,
                                                        },
                                                        inner: [
                                                            Pair {
                                                                rule: list,
                                                                span: Span {
                                                                    str: "[sum salary]",
                                                                    start: 51,
                                                                    end: 63,
                                                                },
                                                                inner: [
                                                                    Pair {
                                                                        rule: expr_call,
                                                                        span: Span {
                                                                            str: "sum salary",
                                                                            start: 52,
                                                                            end: 62,
                                                                        },
                                                                        inner: [
                                                                            Pair {
                                                                                rule: func_call,
                                                                                span: Span {
                                                                                    str: "sum salary",
                                                                                    start: 52,
                                                                                    end: 62,
                                                                                },
                                                                                inner: [
                                                                                    Pair {
                                                                                        rule: ident,
                                                                                        span: Span {
                                                                                            str: "sum",
                                                                                            start: 52,
                                                                                            end: 55,
                                                                                        },
                                                                                        inner: [],
                                                                                    },
                                                                                    Pair {
                                                                                        rule: expr,
                                                                                        span: Span {
                                                                                            str: "salary",
                                                                                            start: 56,
                                                                                            end: 62,
                                                                                        },
                                                                                        inner: [
                                                                                            Pair {
                                                                                                rule: ident,
                                                                                                span: Span {
                                                                                                    str: "salary",
                                                                                                    start: 56,
                                                                                                    end: 62,
                                                                                                },
                                                                                                inner: [],
                                                                                            },
                                                                                        ],
                                                                                    },
                                                                                ],
                                                                            },
                                                                        ],
                                                                    },
                                                                ],
                                                            },
                                                        ],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
